--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:21.2.1'
 
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.firebase:firebase-database:19.2.0'
 
 
 }
