--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,16 @@
         <activity android:name=".ForgotPassword"></activity>
         <activity android:name=".Inventory">
 
+
+        </activity>
+
+        <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".Login"></activity>
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".Register"></activity>
         <activity android:name=".addItem"></activity>
