--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".Add_Ingredients"></activity>
         <activity android:name=".Add_Recipe_Direction"></activity>
         <activity android:name=".Recipe_Main"></activity>
+        <activity android:name=".RecipeInfoActivity"></activity>
 
     </application>
 
