Inventory list view update

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".Add_Ingredients" />
         <activity android:name=".Add_Recipe_Direction" />
         <activity android:name=".Recipe_Main" />
+        <activity android:name=".InventoryInfo"/>
 
         <activity android:name=".Grocery"/>
 
